# crypto-volatility-lab

./: README.md  pyproject.toml  requirements.txt  setup.py
api/: main.py
api/models/BTC-USD/: BTC-USD_GRU.pkl  BTC-USD_LSTM.pkl  BTC-USD_LSTMGRU.pkl  BTC-USD_TCNN.pkl
api/models/ETH-USD/: ETH-USD_GRU.pkl  ETH-USD_LSTM.pkl  ETH-USD_LSTMGRU.pkl  ETH-USD_TCNN.pkl
api/models/LTC-USD/: LTC-USD_GRU.pkl  LTC-USD_LSTM.pkl  LTC-USD_LSTMGRU.pkl  LTC-USD_TCNN.pkl
api/templates/: features.html  index.html  scrape.html  time_series.html
crypto_volatility_lab/: setup.py
crypto_volatility_lab/data_construction/: __init__.py  cryptoScraper.py  featuresCreator.py  timeSeriesCreator.py
crypto_volatility_lab/modeling/: __init__.py  gruPipeline.py  lstmPipeline.py  lstmgruPipeline.py  modelPipelineBase.py  tcnnPipeline.py
crypto_volatility_lab/portfolio_optimization/: __init_.py  portfolioConstructor.py  riskParityEqualizer.py
data/: BTC-USD.csv  ETH-USD.csv
sandbox/: NN_volatility_prediction.ipynb  Notebook_Final_Projet.ipynb  all_currencies copy.ipynb  all_currencies.ipynb  explo_time_series.ipynb  portfolio_optimization.ipynb  project.ipynb  results.ipynb  test.py  test_opti.ipynb
sandbox/data/: all_currencies_data.csv
src/web_scraping/: cryptoScraper.py  test.py
templates/: crypto_predictions.html  features.html  index.html  predictions_menu.html  risk_parity.html  scrape.html  time_series.html
