[tool.poetry]
name = "crypto-volatility-lab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "crypto_volatility_lab" }]


[tool.poetry.dependencies]
python = ">=3.11,<3.12"
bs4 = "^0.0.2"
pandas = "^2.2.3"
numpy = ">=1.23.5,<2.0.0"
yfinance = "^0.2.51"
matplotlib = "^3.10.0"
arch = "^7.2.0"
scikit-learn = "1.2.2"
tensorflow = "2.16.1"
tensorflow-io-gcs-filesystem = "<=0.31.0"
tqdm = "^4.67.1"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
jinja2 = "^3.1.5"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"